feat: definição UI do projeto e criação da página de produtos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div>
   <div class="menu">
-    <!-- <img src="../assets//fazenda.jpg" alt="fazenda" class="image"> -->
-    <button mat-button>Vitrine</button>
-    <button mat-button>Checkout</button>
+    <img src="../assets/logo.png" style="height: 50px;" alt="logo" class="image">
+    <button class="button" mat-button [routerLink]="['/']">Vitrine</button>
+    <button class="button" mat-button [routerLink]="['/checkout']">Checkout</button>
   </div>
 
   <div class="content">
