--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,22 @@
 .menu {
-    width: 96vw;
-    background-color: black;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    background-color: aquamarine;
     margin: 0;
-    padding: 20px 2vw;
+    padding: 5px 2vw;
 }
 
 .content {
-    height: 10px;
+    padding: 20px 2vw;
+    background-color: #eee;
     margin: 20px 2vw;
+    min-height: 83vh;
+}
+
+.button {
+    background-color: white;
+    border: 2px solid black;
+    margin-left: 10px;
+    font-weight: bold;
 }
