--- a/src/app/components/showcase/showcase.component.html
+++ b/src/app/components/showcase/showcase.component.html
@@ -1,1 +1,14 @@
-<p>showcase works!</p>
+<div class="row">
+    <div class="col-lg-2 col-md-3 col-sm-4 col-6" *ngFor="let prod of products">
+        <mat-card class="card" appearance="raised">
+            <img src={{prod.img}} alt="">
+            <h4>{{prod.name}}</h4>
+            R$ {{prod.price.toFixed(2)}}
+            <div class="qtd">
+                <button mat-mini-fab color="warn"><mat-icon>remove</mat-icon></button>
+                <span class="qtdlabel">{{prod.qtd}}</span>
+                <button mat-mini-fab color="warn"><mat-icon>add</mat-icon></button>
+            </div>
+        </mat-card>
+    </div>
+</div>
