--- a/src/app/components/showcase/showcase.component.html
+++ b/src/app/components/showcase/showcase.component.html
@@ -12,3 +12,6 @@
         </mat-card>
     </div>
 </div>
+<div class="footer-buttons">
+    <button class="button" mat-button (click)="goToCheckout()">Ir para checkout</button>
+</div>
