--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,6 @@
 .menu {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
     background-color: aquamarine;
@@ -17,6 +18,10 @@
 .button {
     background-color: white;
     border: 2px solid black;
-    margin-left: 10px;
     font-weight: bold;
+}
+
+.nav-sidenav {
+    background-color: white;
+    padding: 10px;
 }
