--- a/src/app/components/showcase/showcase.component.css
+++ b/src/app/components/showcase/showcase.component.css
@@ -15,3 +15,19 @@ img {
 .qtdlabel {
     padding: 0 1rem;
 }
+
+.footer-buttons {
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.button {
+    background-color: white;
+    border: 2px solid black;
+    margin-top: 15px;
+    margin-left: 15px;
+    font-weight: bold;
+}
