--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -1,10 +1,13 @@
 <div class="resume">
     <div class="itens col-7">
         <h3>Itens:</h3>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li *ngFor="let product of data?.products">
+            <img src={{product.img}} alt="product" class="img">
+            Produto: {{product.name}} - 
+            Valor: R$ {{product.price.toFixed(2)}} - 
+            Quantidade: {{product.qtd}} - 
+            Valor Total: R$ {{(product.price * product.qtd).toFixed(2)}}
+        </li>
     </div>
     <div class="values col-5">
         <div class="totals">
@@ -14,9 +17,9 @@
                 <button class="button" mat-button (click)="applyCoupom()">Aplica Cupom</button>
             </div>
             <br>
-            <h5>Valor Total: R$ </h5>
-            <h5>Valor com desconto: R$ </h5>
-            <h2>Valor Final: R$ </h2>
+            <h5>Valor Total: R$ {{total.toFixed(2)}}</h5>
+            <h5>Desconto: R$ {{discount.toFixed(2)}}</h5>
+            <h2>Valor Final: R$ {{totalWithDiscount.toFixed(2)}}</h2>
     
             <div class="footer-buttons">
                 <button class="button" mat-button [routerLink]="['/']">Voltar</button>
